Separate fast brute force board solving class. Loose coupling between BoardFrame and other classes.

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 This is my solution for mandatory assignment 5 in subject INF1010, Spring 2013, University of Oslo.
 
 The assignment deals with solvign a Sudoku board, usually read from file. It loads the board, applies a "brute-force" solving algorithm that records solutions, and finally presents the user with an interface to view the board and the solutions.
+
+Deviations from assignment:
+
+1. 'add' instead of 'insert' for solution buffer. "Insert" implies insertion at a specified place, between two adjacent elements. As the solution is inserted at either end of the list, "adding" is a more appropriate term.
