--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-This is my solution for mandatory assignment 5 in subject INF1010, Spring 2013, University of Oslo.
+Mandatory 5 for subject INF1010, University of Oslo, spring 2013:
+Brute-force Sudoku solving application with GUI.
 
-The assignment deals with solvign a Sudoku board, usually read from file. It loads the board, applies a "brute-force" solving algorithm that records solutions (up to 500 most recent ones), and finally presents the user with an interface to view the board and the solutions.
+Properties of this particular solution:
+Large - the solver initially sets up required data structures sacrificing memory for efficient runtime.
+No recursive method invocations - All recursion is unwound into one single method body that does the whole job without recursively invoking itself.
+Primitive data types - Used to simplify code, allow for least common denominator object access.
 
-Deviations from assignment:
-
-1. 'add' instead of 'insert' for solution buffer. "Insert" implies insertion at a specified place, between two adjacent elements. As the solution is inserted at either end of the list, "adding" is a more appropriate term.
-
-2. When 500 solutions have been found, instead of just halting solving process and displaying the results, solution list is trimmed, and solving continues. No results are displayed until all solutions have been found (although not all will end up in the list)
+The assignment deals with solving a Sudoku board that is loaded from a file. It applies a "brute-force" solving algorithm that records solutions (up to 500 most recent ones), and finally presents the user with an interface to view the board and the solutions, or dumping output to console, depending on command line arguments.
